--- a/src/index.scss
+++ b/src/index.scss
@@ -187,11 +187,11 @@ body {
     border-radius: 0px 0px 24px 24px;
   }
 
-  .swiper-button-prev img {
+  .swiper-button-prev svg {
     left: 10px;
   }
   
-  .swiper-button-next img {
+  .swiper-button-next svg {
     right: 10px;
   }
   
@@ -245,11 +245,11 @@ body {
     width: 100%;
     height: 405px;
   }
-  .swiper-button-prev img {
+  .swiper-button-prev svg {
     display: none;
   }
   
-  .swiper-button-next img {
+  .swiper-button-next svg {
     display: none;
   }
 
